# DatasetTools

./: .gitignore  README copy.md  agibot_h5.py  agibot_h5_beifen1.py  agibot_h5_pi0.py  benfen2.py  config.toml  convert.sh  features.json  libtcmalloc.so.4.5.3  main.py  output.txt  pyproject.toml
3335935/A2D0015AB00061/12055373/: aligned_joints.h5  data_info.json  meta_info.json
3335935/A2D0015AB00061/12055373/parameters/camera/: hand_left_extrinsic_params_aligned.json  hand_right_extrinsic_params_aligned.json  hand_right_intrinsic_params.json  head_extrinsic_params_aligned.json  head_intrinsic_params.json
agibot_utils/: agibot_utils.py  config copy.py  config.py  lerobot_utils.py
scripts/: convert.ipynb  json_to_h5.py  proprio_stats.h5  show.sh  show_h5.py  use.json
test/: tyro.ipynb
